<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="地区" />-->

        <Spinner
            android:id="@+id/rank_spinner_region"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="#000000" />

        <Spinner
            android:id="@+id/rank_spinner_type"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="#000000" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rank_bt_single"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                android:text="@string/rank_bt_single"
                android:textAllCaps="false" />

            <Button
                android:background="@drawable/button_unselected"
                android:id="@+id/rank_bt_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/rank_bt_average"
                android:textAllCaps="false" />
        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/part_line_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/rank_tv_position"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rank_tv_position" />

        <TextView
            android:id="@+id/rank_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/rank_tv_name" />

        <TextView
            android:id="@+id/rank_tv_country"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/rank_tv_region" />


        <TextView
            android:id="@+id/rank_tv_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rank_tv_score" />
    </LinearLayout>


    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
        android:id="@+id/rank_rv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
