<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/icon" />

    </FrameLayout>

    <!--<LinearLayout-->
    <!--android:clickable="true"-->
    <!--android:id="@+id/drawer_ll_use"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:orientation="horizontal">-->

    <!--<ImageView-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:background="@mipmap/ic_launcher" />-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginLeft="20dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="使用说明" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/drawer_push" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/drawer_tv_push" />

        <Switch
            android:id="@+id/drawer_switch_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

    </LinearLayout>

    <include layout="@layout/part_line_horizontal" />

    <LinearLayout
        android:id="@+id/drawer_ll_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/time_selected" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_tv_time" />

    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:id="@+id/drawer_ll_save"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:clickable="true"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:background="@drawable/drawer_save" />-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="下载全部公式" />-->

    <!--</LinearLayout>-->

    <include layout="@layout/part_line_horizontal" />

    <LinearLayout
        android:id="@+id/drawer_ll_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/drawer_update" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_tv_update" />

    </LinearLayout>

    <include layout="@layout/part_line_horizontal" />

    <LinearLayout
        android:id="@+id/drawer_ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/drawer_feedback" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="用户反馈" />

    </LinearLayout>

    <include layout="@layout/part_line_horizontal" />

    <LinearLayout
        android:id="@+id/drawer_ll_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/drawer_about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_tv_author" />

    </LinearLayout>

    <include layout="@layout/part_line_horizontal" />

    <LinearLayout
        android:id="@+id/drawer_ll_exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/drawer_exit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_tv_exit" />

    </LinearLayout>


</LinearLayout>
